Fixed search bug on tablet

--- a/src/components/appheader.main.less
+++ b/src/components/appheader.main.less
@@ -213,6 +213,10 @@
         padding: 20px 0 0 5px;
       }
 
+      .search-container {
+        display: none;
+      }
+
       .mobile-cart-link-container {
         text-align: center;
         text-transform: uppercase;
@@ -297,6 +301,12 @@
           left: 130px;
         }
       }
+    }
+  }
+
+  .collapsable-container {
+    .search-container {
+      display: block;
     }
   }
 
